error message styling + gifts tiles aligned size and height + like fixes and glow on click + default image for missing url + start of new crowdsourcing feature

--- a/owls/gifted/static/gifted/flatfy-ui/css/style.css
+++ b/owls/gifted/static/gifted/flatfy-ui/css/style.css
@@ -504,6 +504,7 @@ pre {
   max-height: 340px;
 }
 .thumbnail {
+  height: 350px;
   display: block;
   padding: 4px;
   margin-bottom: 5px;
