--- a/owls/gifted/static/gifted/style/intro.css
+++ b/owls/gifted/static/gifted/style/intro.css
@@ -120,3 +120,22 @@ overflow-y: scroll;
 p.error {
   color: #e74c3c;
 }
+
+.help-us {
+  height: 36px!important;
+  position: absolute;
+  right: 30px;
+  top: 10px;
+  cursor: pointer;
+}
+
+.list-group-image {
+  height: 140px!important;
+}
+
+.dislike-glow {
+  box-shadow: 3px -1px 24px rgba(210, 28, 28, 0.44);
+}
+.like-glow  {
+  box-shadow: 3px -1px 24px rgba(10, 84, 132, 0.6);
+}
